# backend

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
infrastructure/: docker-compose.yml  redis.conf
src/: .env.example  config.py  exceptions.py  main.py
src/api/: auth_dependency.py  websockets.py
src/api/v1/: __init__.py  conversations.py  relationships.py  schemas.py  users.py
src/api/websockets/: server.py
src/db/models/: __init__.py  conversation.py  relationship.py  user.py
src/middlewares/: logging_middleware.py
src/schemas/: conversations.py  pagination.py  relationship.py  user.py  websockets.py
src/schemas/websockets/: relationships.py
src/services/: base_service.py  conversation_service.py  message_service.py  relationship_service.py  relationship_stats_service.py  user_service.py
src/utils/: auth.py  custom_logging.py  datetime_utils.py  depends.py  git.py  jwt_helper.py  logs.py  mapper.py  orm_utils.py  pagination.py  pydantic_utils.py  s3.py  socketio_utils.py  stub.py
src/utils/socketio/: common.py  exceptions.py  server.py  socket_manager.py
tests/: conftest.py
tests/test_services/: test_conversation_service.py
tests/test_utils/: test_auth.py
