[tool.poetry]
name = "nightingale-backend"
version = "0.0.0.post20.dev0+5dcb01d"
description = ""
authors = ["GLEF1X <glebgar567@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
uvicorn = { version = "^0.23.2", extras = ["standard"] }
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.0"
itsdangerous = "^2.1.2"
orjson = "^3.9.1"
email-validator = "^2.0.0.post2"
beanie = "^1.21.0"
starlette-context = "^0.3.6"
pyjwt = { version = "^2.7.0", extras = ["crypto"]}
structlog = "^23.1.0"
colorama = "^0.4.6"
pyhumps = "^3.8.0"
aiohttp = "^3.8.4"
ddtrace = "^1.18.3"
aioboto3 = "^11.2.0"
python-socketio = "^5.8.0"
types-aioboto3 = "^11.2.0"
redis = { version = "^5.0.0", extras = ["hiredis"]}
pydantic-settings = "^2.0.2"
typing-extensions = "^4.7.1"
python-multipart = "^0.0.6"
rodi = "^2.0.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
ruff = "^0.0.265"
isort = "^5.12.0"
pytest = "^7.3.1"
pytest-anyio = "^0.0.0"
motor-stubs = "^1.7.1"
faker = "^19.3.0"
pytest-pretty = "^1.2.0"
better-exceptions = "^0.3.3"
rich = "^13.4.1"
setuptools = "^68.0.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
]

[tool.ruff]
fix = true
unfixable = [
    "ERA", # do not autoremove commented out code
]
target-version = "py311"
line-length = 100
extend-select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "ERA", # flake8-eradicate/eradicate
    "I",   # isort
    "N",   # pep8-naming
    "PIE", # flake8-pie
    "PGH", # pygrep
    "RUF", # ruff checks
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "TCH002", # Move third-party import {} into a type-checking block
    "TCH001" # Move application import {} into a type-checking block
]

[tool.ruff.pep8-naming]
classmethod-decorators = ['pydantic.validator', 'pydantic.root_validator', 'pydantic.validate_arguments']

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.isort]
force-single-line = true
lines-between-types = 1
lines-after-imports = 2
required-imports = ["from __future__ import annotations"]

[tool.mypy]
plugins = "pydantic.mypy"
python_version = "3.11"
show_error_codes = true
show_error_context = true
pretty = true
ignore_missing_imports = false
warn_unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
follow_imports_for_stubs = true
namespace_packages = true
show_absolute_path = true

[[tool.mypy.overrides]]
module = [
    "aiofiles",
    "async_lru",
    "uvloop",
    "redis.*",
    "babel.*",
]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.poetry-dynamic-versioning]
enable = false
vcs = "git"
style = "pep440"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
